--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "eyes": "0.1.x",
     "pkginfo": "0.2.x",
     "request": "2.9.x",
-    "stack-trace": "0.0.x"
+    "stack-trace": "0.0.x",
+    "prettyjson": "0.6.x"
   },
   "devDependencies": {
     "vows": "0.6.x"
